base/vgallery/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vgallery-service
spec:
  selector:
    app.kubernetes.io/name: vgallery
  ports:
    - port: 80
      targetPort: 3000
