base/vgallery/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vgallery-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-clusterissuer
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  tls:
    - hosts: [vgallery.cagea1.com]
      secretName: vgallery-tls
  rules:
    - host: vgallery.cagea1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vgallery-service
                port:
                  number: 80
